Fix checkbox being visible on about me page

--- a/app/assets/stylesheets/about.scss
+++ b/app/assets/stylesheets/about.scss
@@ -68,6 +68,7 @@
 	}
 	#email-checkbox {
 		position: fixed;
+		left: 125%
 	}
 	#email-checkbox:checked {
 		& ~ .overlay {
